# agent-cli-template

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  init.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
agents/: README.md  README.zh-CN.md  code-reviewer.md  planner.md
config/: credentials.template.json  prefixes.json
contexts/: README.md  README.zh-CN.md  dev.md  oncall.md  review.md
docs/: architecture.md
docs/contribution/: overview.md
docs/decisions/: 0001-scaffold-completion.md  0002-architecture-reset.md
docs/explainers/: contracts-for-ai-agents.md  contracts-for-ai-agents.zh-CN.md  onboarding-a-service.md  onboarding-sub-team.md  onboarding-sub-team.zh-CN.md  the-di-shared-skill.md  the-di-shared-skill.zh-CN.md  the-shared-skill.md
docs/reference/: commands.md  commands.zh-CN.md
docs/specs/: 2026-05-14-scaffold-completion.md  2026-05-15-di-cli-architecture.md  2026-05-15-di-cli-architecture.zh-CN.md  2026-05-18-agent-cli-protocol.md
mcp/: README.md  README.zh-CN.md
rules/: README.md  README.zh-CN.md  git-workflow.md
scripts/: validate.sh  validate_repo.py
skills/: README.md  README.zh-CN.md
skills/di-mr-flow/: SKILL.md
skills/di-shared/: SKILL.md
skills/di-skill-template/: README.md  SKILL.md
skills/di-skill-template/references/: example-workflow.md
skills/mycli-shared/: SKILL.md
skills/mycli-skill-template/: SKILL.md
src/di/: __init__.py  __main__.py  cli.py
src/di/contracts/: __init__.py  envelope.py  error_type.py  exit_code.py  handle.py  notice.py  risk.py
src/di/core/: __init__.py  _sync.py  doctor.py  install.py  update.py  validate.py  version.py
src/di/manifest/: __init__.py  registry.py
src/di/runtime/: __init__.py  checks.py  flags.py  output.py
src/di/validators/: __init__.py  frontmatter.py  repo.py  skill.py
src/mycli/: __init__.py  __main__.py  cli.py
src/mycli/contracts/: __init__.py  envelope.py  error_type.py  exit_code.py  handle.py  notice.py  risk.py
src/mycli/core/: __init__.py  _sync.py  doctor.py  hello.py  install.py  update.py  validate.py  version.py
src/mycli/manifest/: __init__.py  registry.py
src/mycli/runtime/: __init__.py  flags.py  output.py
src/mycli/validators/: __init__.py  repo.py  (+2 more)
tests/: conftest.py  test_validate_repo.py
tests/contracts/: test_envelope.py  test_error_type.py  test_exit_code.py  test_handle.py  test_notice.py  test_public_api.py  test_risk.py
tests/core/: test_doctor.py  test_hello.py  test_install.py  test_update.py  test_validate.py  test_version.py
tests/runtime/: conftest.py  test_cli.py  test_flags.py  test_manifest.py  test_output.py
tests/validators/: test_frontmatter.py  test_repo.py  test_skill.py
