[project]
name = "di-cli"
version = "0.1.0"
description = "DI Toolkit for internal Data Infra developers, service owners, and on-call engineers."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = []

[tool.di-cli]
status = "scaffold"
