[project]
name = "di-cli"
version = "0.2.0.dev0"
description = "Operation layer between AI agents and the DI 开放平台."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Data Infra", email = "li.luo@shopee.com" },
]
license = { text = "Proprietary" }
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
# The `di` script entry will resolve once src/di/cli.py defines `main` (T3).
# Pre-T3, `pip install -e .` succeeds but invoking `di` raises ImportError.
di = "di.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/di"]

[tool.hatch.build]
include = [
    "src/di/**",
    "skills/**",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
# Check against 3.10 syntax (X | Y unions, etc.); runtime still supports 3.9
# because all source files use `from __future__ import annotations`.
python_version = "3.10"

[tool.di-cli]
status = "pre-alpha"
spec = "docs/specs/2026-05-15-di-cli-architecture.md"
