[project]
name = "mycli"
version = "0.1.0"
description = "Agent-facing CLI scaffold built from agent-cli-template."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "agent-cli-template contributors" },
]
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
mycli = "mycli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mycli"]

[tool.hatch.build]
include = [
    "src/mycli/**",
    "skills/**",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
# Check against 3.10 syntax (X | Y unions, etc.); runtime still supports 3.9
# because all source files use `from __future__ import annotations`.
python_version = "3.10"

[tool.agent-cli]
# Skill prefix enforced by `mycli validate`. Forks should rename their
# skills under skills/ to match this prefix after running init.py.
skill_prefix = "mycli-"
